--- a/web.html
+++ b/web.html
@@ -5,6 +5,7 @@
         <body>
             <div>
                 <H1>hola mundo</H1>
+                <h2> la tenes adentro</h2>
             </div>
         </body>
     </head>
