--- a/web.html
+++ b/web.html
@@ -5,7 +5,7 @@
         <body>
             <div>
                 <H1>hola mundo</H1>
-                <h2> la tenes adentro</h2>
+                <h2> que carajos hago</h2>
             </div>
         </body>
     </head>
