--- a/web.html
+++ b/web.html
@@ -4,8 +4,12 @@
         <title>My pagina web </title>
         <body>
             <div>
-                <H1>hola mundo</H1>
-                <h2> que carajos hago</h2>
+                <h1> 
+                    hola mundo
+                </h1>
+                <h2>
+                    Les recuerdo tomar el curso de git y github en platzi 
+                </h2>
             </div>
         </body>
     </head>
